[project]
name = "himalaya-experiments"
version = "0.4.0"
description = "Hydra-managed continual-learning experiments for the HIMALAYA adapter"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1",
    "transformers>=4.35",
    "datasets>=2.15",
    "hydra-core>=1.3",
    "wandb>=0.16",
    "optuna>=3.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1",
    "numpy>=1.23",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "tqdm>=4.66"
]